# cellulus

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  TestIdealised3D.py  TestZarr3D.py  Tutorial.ipynb  VerySimpleSSLTrainer.py  environment.yml  gpt_unets.py  idealised_image_utils.py  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yaml  publish-docs.yaml
api/dataset_config/: index.html
api/experiment_config/: experiment_config.md  index.html
api/inference_config/: index.html  inference_config.md
api/meta_data/: index.html  meta_data.md
api/model_config/: index.html
api/oce_loss/: index.html  oce_loss.md
api/train_config/: index.html
api/zarr_dataset/: index.html
cellulus/: cli.py  detect.py  evaluate.py  infer.py  post_process.py  predict.py  segment.py  train.py  train_semi_supervised.py
cellulus/configs/: __init__.py  dataset_config.py  experiment_config.py  inference_config.py  model_config.py  predict_config.py  semi_supervised_experiment_config.py  semi_supervised_train_config.py  train_config.py  utils.py
cellulus/criterions/: __init__.py  my_loss.py  (+2 more)
colocseg/: datamodules.py  datasets.py  evaluation.py  infer_pseudo_gt.py  infer_pseudo_gt_exp.py  infer_pseudo_gt_from_mean_std.py  infer_segmentation.py  infer_spatial_embeddings.py  inference.py  loss.py  loss_supervised.py  metrics.py  model.py  simplified_train_ssl.py  simplified_trainingmodules.py  test_inference.py  train_ssl.py  train_ssl_ctc.py  train_supervised.py  trainingmodules.py  transforms.py  utils.py  visualizations.py
datasets/: Idealised_Image_Datasets.py  SimplifiedCoordinateDataset.py
docs/: index.md
embeddingutils/: __init__BU.py  affinities.py  affinity_normalization.py  loss.py  offsets.py  segmentation.py  transforms.py  visualization.py
getting-started/: getting-started.md  index.html
resources/: bibtex.txt
scripts/: convert_tissuenet.py  postprocess.py
search/: search_index.json
tests/: conftest.py  test_api.py  test_dataset.py  train.toml
(+652 files in other folders)
