# https://peps.python.org/pep-0517/
# https://hatch.pypa.io/latest/config/build/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "cellulus"
description = "Unsupervised Segmentation of Cells in Microscopy Images"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Steffen Wolf", email = "" },
    { name = "Manan Lalit", email = "lalitm@janelia.hhmi.org" },
    { name = "Henry Westmacott", email = "henryjw@mrc-lmb.cam.ac.uk" },
    { name = "Jan Funke", email = "funkej@janelia.hhmi.org" },
]
dynamic = ["version"]
dependencies = [
  "attrs",
  "click",
  "tomli",
  "torch",
  "zarr",
  "scikit-image",
  "tqdm",
  "gunpowder",
  "scikit-learn",
  "funlib.learn.torch @ git+https://github.com/funkelab/funlib.learn.torch@f36decaf95e2b6d1b74a45b31660d29f8e57e5c4"
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "pytest-cov", "ruff", "twine", "build"]
examples = ["jupyter", "matplotlib"]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx_togglebutton",
    "jupyter_sphinx",
]

[project.urls]
homepage = "https://funkelab.github.io/cellulus"

[project.scripts]
train = "cellulus.cli:train"
infer = "cellulus.cli:infer"

# https://hatch.pypa.io/latest/version/
[tool.hatch.version]
path = "cellulus/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

# https://beta.ruff.rs/docs
[tool.ruff]
target-version = "py38"
src = ["cellulus"]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff specific rules
]

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: ${PY_MAJOR_VERSION} no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.mypy]
files = "cellulus"
strict = true
allow_untyped_defs = true
allow_untyped_calls = true
disallow_any_generics = false
ignore_missing_imports = true
